// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ignores comments 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "list": false,
          "title": Array [
            Object {
              "attrs": Object {
                "href": "one.md",
              },
              "html": "One",
              "list": false,
              "type": "a",
            },
          ],
          "titleText": "One",
          "type": "entry",
          "url": "one.md",
        },
        Object {
          "children": Array [],
          "list": false,
          "title": Array [
            Object {
              "attrs": Object {
                "href": "two.md",
              },
              "html": "Two",
              "list": false,
              "type": "a",
            },
          ],
          "titleText": "Two",
          "type": "entry",
          "url": "two.md",
        },
      ],
      "list": true,
      "type": "list",
    },
  ],
  "list": true,
  "simple": false,
  "type": "root",
}
`;

exports[`parses link in tag 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "list": false,
          "title": Array [
            Object {
              "attrs": Object {},
              "children": Array [
                Object {
                  "attrs": Object {
                    "href": "one.md",
                  },
                  "html": "One",
                  "list": false,
                  "type": "a",
                },
              ],
              "list": false,
              "simple": false,
              "type": "em",
            },
          ],
          "titleText": "One",
          "type": "entry",
          "url": "one.md",
        },
        Object {
          "children": Array [],
          "list": false,
          "title": Array [
            Object {
              "attrs": Object {
                "href": "two.md",
              },
              "html": "Two",
              "list": false,
              "type": "a",
            },
          ],
          "titleText": "Two",
          "type": "entry",
          "url": "two.md",
        },
      ],
      "list": true,
      "type": "list",
    },
  ],
  "list": true,
  "simple": false,
  "type": "root",
}
`;

exports[`parses nested list 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "list": false,
              "title": Array [
                Object {
                  "attrs": Object {
                    "href": "one-a.md",
                  },
                  "html": "One A",
                  "list": false,
                  "type": "a",
                },
              ],
              "titleText": "One A",
              "type": "entry",
              "url": "one-a.md",
            },
            Object {
              "children": Array [],
              "list": false,
              "title": Array [
                Object {
                  "attrs": Object {
                    "href": "one-b.md",
                  },
                  "html": "One b",
                  "list": false,
                  "type": "a",
                },
              ],
              "titleText": "One b",
              "type": "entry",
              "url": "one-b.md",
            },
          ],
          "list": true,
          "title": Array [
            Object {
              "attrs": Object {
                "href": "one.md",
              },
              "html": "One",
              "list": false,
              "type": "a",
            },
          ],
          "titleText": "One",
          "type": "entry",
          "url": "one.md",
        },
        Object {
          "children": Array [],
          "list": false,
          "title": Array [
            Object {
              "attrs": Object {
                "href": "two.md",
              },
              "html": "Two",
              "list": false,
              "type": "a",
            },
          ],
          "titleText": "Two",
          "type": "entry",
          "url": "two.md",
        },
      ],
      "list": true,
      "type": "list",
    },
  ],
  "list": true,
  "simple": false,
  "type": "root",
}
`;

exports[`parses simple outline 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "list": false,
          "title": Array [
            Object {
              "attrs": Object {
                "href": "one.md",
              },
              "html": "One",
              "list": false,
              "type": "a",
            },
          ],
          "titleText": "One",
          "type": "entry",
          "url": "one.md",
        },
        Object {
          "children": Array [],
          "list": false,
          "title": Array [
            Object {
              "attrs": Object {
                "href": "two.md",
              },
              "html": "Two",
              "list": false,
              "type": "a",
            },
          ],
          "titleText": "Two",
          "type": "entry",
          "url": "two.md",
        },
      ],
      "list": true,
      "type": "list",
    },
  ],
  "list": true,
  "simple": false,
  "type": "root",
}
`;

exports[`parses tag in link 1`] = `
Object {
  "attrs": Object {},
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "list": false,
          "title": Array [
            Object {
              "attrs": Object {
                "href": "one.md",
              },
              "html": "<em>One</em>",
              "list": false,
              "type": "a",
            },
          ],
          "titleText": "One",
          "type": "entry",
          "url": "one.md",
        },
        Object {
          "children": Array [],
          "list": false,
          "title": Array [
            Object {
              "attrs": Object {
                "href": "two.md",
              },
              "html": "Two",
              "list": false,
              "type": "a",
            },
          ],
          "titleText": "Two",
          "type": "entry",
          "url": "two.md",
        },
      ],
      "list": true,
      "type": "list",
    },
  ],
  "list": true,
  "simple": false,
  "type": "root",
}
`;
